tests/builder/ui/required_field_omitted.stderr
warning: use of deprecated method `RequiredFieldsBuilder::<((), __optional)>::build`: Missing required field required
  --> tests/builder/ui/required_field_omitted.rs:12:58
   |
12 |     let _ = RequiredFields::builder().optional(Some(42)).build();
   |                                                          ^^^^^
   |
   = note: `#[warn(deprecated)]` on by default

error[E0061]: this method takes 1 argument but 0 arguments were supplied
  --> tests/builder/ui/required_field_omitted.rs:12:58
   |
12 |     let _ = RequiredFields::builder().optional(Some(42)).build();
   |                                                          ^^^^^-- argument #1 of type `RequiredFieldsBuilder_Error_Missing_required_field_required` is missing
   |
note: method defined here
  --> tests/builder/ui/required_field_omitted.rs:3:10
   |
 3 | #[derive(typed_builder::TypedBuilder)]
   |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: this error originates in the derive macro `typed_builder::TypedBuilder` (in Nightly builds, run with -Z macro-backtrace for more info)
help: provide the argument
   |
12 |     let _ = RequiredFields::builder().optional(Some(42)).build(/* RequiredFieldsBuilder_Error_Missing_required_field_required */);
   |                                                                +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
